SLING-3959 - XSS module contribution
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1639636 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -135,6 +135,7 @@
           <module>validation</module>
           <module>launchpad/karaf</module>
           <module>launchpad/testing</module>
+          <module>xss</module>
           <!-- disabled due to SLING-4151 for now <module>launchpad/debian</module> -->
     </modules>
     <profiles>
