SLING-4187 - Move validation and xss projects into contrib/extensions
Also update the bundle locations in the contrib reactor pom.

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1640930 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -116,6 +116,8 @@
           <module>extensions/sling-query</module>
           <module>extensions/superimposing</module>
           <module>extensions/tenant</module>
+          <module>extensions/validation</module>
+          <module>extensions/xss</module>
           <module>jcr/compiler</module>
           <module>jcr/jackrabbit-client</module>
           <module>jcr/ocm</module>
@@ -132,10 +134,8 @@
           <module>scripting/thymeleaf</module>
           <module>scripting/velocity</module>
           <module>scripting/xproc</module>
-          <module>validation</module>
           <module>launchpad/karaf</module>
           <module>launchpad/testing</module>
-          <module>xss</module>
           <module>launchpad/debian</module>
     </modules>
     <profiles>
