--- a/pom.xml
+++ b/pom.xml
@@ -223,7 +223,7 @@
                         <bundle>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.xss</artifactId>
-                            <version>1.0.0-SNAPSHOT</version>
+                            <version>1.0.0</version>
                             <startLevel>20</startLevel>
                         </bundle>
                         <bundle>
